--- a/index.html
+++ b/index.html
@@ -16,47 +16,47 @@
 
     <!-- JavaScript Section -->
     <!-- CreateJS Libraries -->
-    <script src="/node_modules/easeljs/lib/easeljs.min.js"></script>
-    <script src="/node_modules/tweenjs/lib/tweenjs.min.js"></script>
-    <script src="/node_modules/soundjs/lib/soundjs.min.js"></script>
-    <script src="/node_modules/preloadjs/lib/preloadjs.min.js"></script>
+    <script src="../node_modules/easeljs/lib/easeljs.min.js"></script>
+    <script src="../node_modules/tweenjs/lib/tweenjs.min.js"></script>
+    <script src="../node_modules/soundjs/lib/soundjs.min.js"></script>
+    <script src="../node_modules/preloadjs/lib/preloadjs.min.js"></script>
 
 
     <!-- Game Scripts -->
 
     <!-- Config Scripts -->
-    <script src="/Scripts/config/scene.js"></script>
-    <script src="/Scripts/config/screen.js"></script>
+    <script src="../Scripts/config/scene.js"></script>
+    <script src="../Scripts/config/screen.js"></script>
 
     <!-- Math Scripts -->
-    <script src="/Scripts/math/Vec2.js"></script>
+    <script src="../Scripts/math/Vec2.js"></script>
 
     <!-- Manager Scripts -->
-    <script src="/Scripts/managers/game.js"></script>
+    <script src="../Scripts/managers/game.js"></script>
 
     <!-- Game Objects -->
 
-    <script src="/Scripts/objects/gameobject.js"></script>
-    <script src="/Scripts/objects/label.js"></script>
-    <script src="/Scripts/objects/button.js"></script>
-    <script src="/Scripts/objects/scene.js"></script>
+    <script src="../Scripts/objects/gameobject.js"></script>
+    <script src="../Scripts/objects/label.js"></script>
+    <script src="../Scripts/objects/button.js"></script>
+    <script src="../Scripts/objects/scene.js"></script>
 
-    <script src="/Scripts/objects/plane.js"></script>
-    <script src="/Scripts/objects/universe.js"></script>
-    <script src="/Scripts/objects/starmini.js"></script>
-    <script src="/Scripts/objects/meteroid.js"></script>
+    <script src="../Scripts/objects/plane.js"></script>
+    <script src="../Scripts/objects/universe.js"></script>
+    <script src="../Scripts/objects/starmini.js"></script>
+    <script src="../Scripts/objects/meteroid.js"></script>
 
     <!-- More Manager Scripts -->
-    <script src="/Scripts/managers/scoreboard.js"></script>
-    <script src="/Scripts/managers/collision.js"></script>
+    <script src="../Scripts/managers/scoreboard.js"></script>
+    <script src="../Scripts/managers/collision.js"></script>
 
     <!-- Scene Scripts -->
-    <script src="/Scripts/scenes/end.js"></script>
-    <script src="/Scripts/scenes/play.js"></script>
-    <script src="/Scripts/scenes/start.js"></script>
+    <script src="../Scripts/scenes/end.js"></script>
+    <script src="../Scripts/scenes/play.js"></script>
+    <script src="../Scripts/scenes/start.js"></script>
 
     <!-- Core Script -->
-    <script src="/Scripts/core/game.js"></script>
+    <script src="../Scripts/core/game.js"></script>
 </body>
 
 </html>
