--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CreateJS Demo with TypeScript</title>
     <!-- CSS Section -->
-    <link rel="stylesheet" href="/Content/app.css">
+    <link rel="stylesheet" href="../Content/app.css">
 </head>
 
 <body>
